{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 36,
  "lineage": "99439711-3bae-db3e-9b23-9e83f66996d8",
  "resources": [
    {
      "module": "module.application_gateway",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/frontnic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/frontendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "frontnic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hub-and-spoke-rg",
            "tags": {
              "environment": "dev",
              "owner": "mehar"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/backendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "backendnic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "hub-and-spoke-rg"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.application_gateway",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/publicIPAddresses/App-gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.101.37",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "App-gateway-pip",
            "resource_group_name": "hub-and-spoke-rg",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.application_gateway",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet/subnets/AppgatewaySubnet",
            "name": "AppgatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "HubVnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.application_gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "Appgate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw1",
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/backendAddressPools/backend-pool",
                "ip_addresses": [],
                "name": "backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/backendHttpSettingsCollection/http-setting",
                "name": "http-setting",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/frontendIPConfigurations/frontend-ip",
                "name": "frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/publicIPAddresses/App-gateway-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/frontendPorts/frontend-port-80",
                "name": "frontend-port-80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet/subnets/AppgatewaySubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/frontendIPConfigurations/frontend-ip",
                "frontend_ip_configuration_name": "frontend-ip",
                "frontend_port_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/frontendPorts/frontend-port-80",
                "frontend_port_name": "frontend-port-80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway",
            "identity": [],
            "location": "eastus",
            "name": "mehar-appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/backendAddressPools/backend-pool",
                "backend_address_pool_name": "backend-pool",
                "backend_http_settings_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/backendHttpSettingsCollection/http-setting",
                "backend_http_settings_name": "http-setting",
                "http_listener_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/applicationGateways/mehar-appgateway/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "hub-and-spoke-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.application_gateway.data.azurerm_public_ip.pip",
            "module.application_gateway.data.azurerm_subnet.subnet",
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.public_Ip.azurerm_public_ip.pip",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.application_gateway",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "vm_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.azure_bation",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "bastion1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.204.128",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bastion-pip",
            "resource_group_name": "hub-and-spoke-rg",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.azure_bation",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "bastion1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "HubVnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_Ip.azurerm_public_ip.pip",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/frontendsubnet",
            "name": "frontendsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "spokevnet1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/backendsubnet",
            "name": "backendsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "spokevnet1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/frontnic",
            "internal_domain_name_suffix": "sb0loi4pdkrefhylwx21onpfzc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/frontendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "frontnic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hub-and-spoke-rg",
            "tags": {
              "environment": "dev",
              "owner": "mehar"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "internal_domain_name_suffix": "sb0loi4pdkrefhylwx21onpfzc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/backendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "backendnic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "hub-and-spoke-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_security_group",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/frontnic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/frontendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "frontnic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hub-and-spoke-rg",
            "tags": {
              "environment": "dev",
              "owner": "mehar"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/backendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "backendnic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "hub-and-spoke-rg"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/frontnic|/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/front-nsg",
            "network_interface_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/frontnic",
            "network_security_group_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/front-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.network_security_group.azurerm_network_security_group.nsg",
            "module.network_security_group.data.azurerm_network_interface.nic",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/backendnic|/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/front-nsg",
            "network_interface_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "network_security_group_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/front-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.network_security_group.azurerm_network_security_group.nsg",
            "module.network_security_group.data.azurerm_network_interface.nic",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/front-nsg",
            "location": "eastus",
            "name": "front-nsg",
            "resource_group_name": "hub-and-spoke-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "nsg2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/backend-nsg",
            "location": "eastus",
            "name": "backend-nsg",
            "resource_group_name": "hub-and-spoke-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-sql",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_subnet.subnet",
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_Ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgateway",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/publicIPAddresses/App-gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.101.37",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "App-gateway-pip",
            "resource_group_name": "hub-and-spoke-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "bastion_pip",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.204.128",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bastion-pip",
            "resource_group_name": "hub-and-spoke-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aplicationgtw",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet/subnets/AppgatewaySubnet",
            "name": "AppgatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "HubVnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "backendsubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/backendsubnet",
            "name": "backendsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "spokevnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "frontendsubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/frontendsubnet",
            "name": "frontendsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "spokevnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-and-spoke-rg",
            "virtual_network_name": "HubVnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/frontnic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/frontendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "frontnic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hub-and-spoke-rg",
            "tags": {
              "environment": "dev",
              "owner": "mehar"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/subnets/backendsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "backendnic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "hub-and-spoke-rg"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Hubvnet",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f8e4ff8c-bf13-40ab-8a42-598fef8f1668",
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet",
            "location": "eastus",
            "name": "HubVnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "hub-and-spoke-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "spoke1vnet",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "23b77490-1acf-42a2-9f0b-b5f9b735e5ca",
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1",
            "location": "eastus",
            "name": "spokevnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "hub-and-spoke-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_to_spoke1",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet/virtualNetworkPeerings/HubVnet-to-spokevnet1",
            "name": "HubVnet-to-spokevnet1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1",
            "resource_group_name": "hub-and-spoke-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "HubVnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "spoke1_to_hub",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/spokevnet1/virtualNetworkPeerings/spokevnet1-to-HubVnet",
            "name": "spokevnet1-to-HubVnet",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a60bfb4b-160f-44e7-979b-775bdd787c90/resourceGroups/hub-and-spoke-rg/providers/Microsoft.Network/virtualNetworks/HubVnet",
            "resource_group_name": "hub-and-spoke-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spokevnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rg",
            "module.virtual_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}